<resources>
    <string name="app_name">VitaApp</string>
    <string name="documento">Documento</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="beneficiarios">Beneficiarios</string>
    <string name="registrar">Registrar</string>


    <string name="tipo_documento">Tipo de documento</string>
    <string name="num_documento">Documento</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="title_activity_login" />

    <string name="inicio">Inicio</string>
    <string name="registro_usu">Registrar Afiliado</string>
    <string name="abrir_sesion">Abrir Sesión</string>
    <string name="registrar_afiliado">Registrar Afiliado</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
</resources>