<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="604dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="126dp"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/txtInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:textAlignment="center"
            android:textColor="#0F1010"
            android:textIsSelectable="false"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/btnRegistrarUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_afiliado"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/btnSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>